# Search-Engine

21f-srch-ngn-blakeG-master/: CMakeLists.txt  TraverseFileSystem.cpp  avlTree.h  catch_setup.cpp  docParser.cpp  docParser.h  hashTable.h  indexHandler.cpp  indexHandler.h  main.cpp  parsings  porter2_stemmer.h  queryProcessor.cpp  queryProcessor.h  sample_tests.cpp  searcher.cpp  searcher.h
